#3585 fix: SQL aggregating projection with count(*) returns nothing on empty type (#3587)
(cherry picked from commit ee652d539c42c39840c8e5fd4a3c80f6382443ba)